Fixed faq overflow and button style

--- a/css/styles.css
+++ b/css/styles.css
@@ -278,7 +278,8 @@ a{
     background-image: none;
     background-color: #BD8868;
     color: white;
-    border-radius: 5px;
+    border-radius: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .panel{
@@ -287,21 +288,21 @@ a{
     min-width: 200px !important;
     max-width: 800px;
 }
-.panel-heading {
+/* .panel-heading {
     height: 100px;
-}
+} */
 
 .panel-body {
     color : white;
 }
 
  @media (min-width: 576px) {
-    .faq {font-size: 1.5em; }
+    .faq {font-size: 1.0em; }
 
 }
 
 @media (max-width: 768px) {
-    .faq{font-size: 2.0em;}
+    .faq{font-size: 1.5em;}
 }
 
 @media (min-width: 992px) {
